# tree-sitter-jam

./: .gitignore  Cargo.toml  README.md  extension.toml  grammar.js
editors/zed/: extension.toml
editors/zed/languages/jam/: config.toml  highlights.scm  indents.scm
languages/jam/: highlights.scm
queries/: highlights.scm
src/: grammar.json  node-types.json  parser.c
test/corpus/: declarations.txt  expressions.txt  statements.txt
