[package]
name = "tree-sitter-jam"
description = "Jam grammar for tree-sitter"
version = "0.1.1"
authors = ["Raphael Amorim"]
license = "MIT"
keywords = ["incremental", "parsing", "tree-sitter", "jam"]
categories = ["parsing", "text-editors"]
repository = "https://github.com/raphamorim/tree-sitter-jam"
edition = "2021"
autoexamples = false

build = "bindings/rust/build.rs"
include = [
    "bindings/rust/*",
    "grammar.js",
    "queries/*",
    "src/*",
    "tree-sitter.json",
]

[lib]
path = "bindings/rust/lib.rs"

[dependencies]
tree-sitter-language = "0.1"

[build-dependencies]
cc = "1.2"

[dev-dependencies]
tree-sitter = "0.25"
